added a few more examples

--- a/POSTagging.ipynb
+++ b/POSTagging.ipynb
@@ -2,32 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from nltk.corpus import brown"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['adventure', 'belles_lettres', 'editorial', 'fiction', 'government', 'hobbies', 'humor', 'learned', 'lore', 'mystery', 'news', 'religion', 'reviews', 'romance', 'science_fiction']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print (brown.categories())"
+    "import nltk\n",
+    "from nltk import pos_tag, word_tokenize\n",
+    "text = word_tokenize(\"They refuse to permit us to obtain the refuse permit\")"
    ]
   },
   {
@@ -37,7 +20,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "pos_tag(text)"
+   ]
   }
  ],
  "metadata": {
