including the stuff we wrote in class

--- a/NLTKCorpora.ipynb
+++ b/NLTKCorpora.ipynb
@@ -51,11 +51,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ca01', 'ca02', 'ca03', 'ca04']"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nltk.corpus.brown.fileids()[0:4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Several', 'defendants', 'in', 'the', 'Summerdale', ...]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nltk.corpus.brown.words('ca03')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('The', 'DET'), ('Fulton', 'NOUN'), ...]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "nltk.corpus.brown.tagged_words(tagset='universal')"
    ]
@@ -69,14 +124,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['my',\n",
+       " 'cousin',\n",
+       " 'drew',\n",
+       " 'a',\n",
+       " 'messed',\n",
+       " 'up',\n",
+       " 'pic',\n",
+       " 'on',\n",
+       " 'my',\n",
+       " 'cast',\n",
+       " 'PART',\n",
+       " '24',\n",
+       " '/',\n",
+       " 'm',\n",
+       " 'boo',\n",
+       " '.',\n",
+       " '26',\n",
+       " '/',\n",
+       " 'm',\n",
+       " 'and']"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from nltk.corpus import nps_chat\n",
-    "nps_chat.words()"
+    "nps_chat.words()[100:120]"
    ]
   },
   {
@@ -92,12 +177,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ca01', 'ca02', 'ca03', 'ca04']"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['The', 'Fulton', 'County', 'Grand', 'Jury', 'said', ...]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "brown.words('ca01')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -108,23 +226,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['austen-emma.txt', 'austen-persuasion.txt', 'austen-sense.txt', 'bible-kjv.txt', 'blake-poems.txt', 'bryant-stories.txt', 'burgess-busterbrown.txt', 'carroll-alice.txt', 'chesterton-ball.txt', 'chesterton-brown.txt', 'chesterton-thursday.txt', 'edgeworth-parents.txt', 'melville-moby_dick.txt', 'milton-paradise.txt', 'shakespeare-caesar.txt', 'shakespeare-hamlet.txt', 'shakespeare-macbeth.txt', 'whitman-leaves.txt']\n"
+     ]
+    }
+   ],
    "source": [
-    "from nltk.corpus import gutenberg"
+    "from nltk.corpus import gutenberg\n",
+    "print(gutenberg.fileids())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "caesar_text = gutenberg.raw('shakespeare-caesar.txt')\n",
+    "caesar_words = gutenberg.words('shakespeare-caesar.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['[', 'The', 'Tragedie', 'of', 'Julius', 'Caesar', ...]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "caesar_words"
+   ]
   },
   {
    "cell_type": "code",
