added new notebooks

--- a/Collocations.ipynb
+++ b/Collocations.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -61,17 +61,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['per cent', 'New York', 'United States', 'White House', 'home runs', 'last week', 'San Francisco', 'last year', 'Los Angeles', 'anti-trust laws', 'Premier Khrushchev', 'Kansas City', 'President Kennedy', 'years ago', 'Air Force', 'United Nations', 'New Orleans', 'High School', 'Viet Nam', 'collective bargaining']\n"
+      "[\"`` ''\", \"'' said\", 'said ``', 'Mr. Crombie', 'Mr. Blatz', 'years ago', 'Mr. Gorboduc', 'humor comedy', \"'' Moreland\", 'General Burnside', 'Los Angeles', 'police captain', \"General Burnside's\", 'Mother Cabrini', 'stone wall', 'Old Order', 'misplaced modifier', 'piano stool', 'last week', \"'' ``\"]\n"
      ]
     }
    ],
    "source": [
-    "words = brown.words(categories=[\"news\"])\n",
+    "words = brown.words(categories=['humor'])\n",
     "\n",
     "ignored_words = stopwords.words('english')\n",
-    "finder = BigramCollocationFinder.from_words(words, 2) #last param - windows size\n",
+    "finder = BigramCollocationFinder.from_words(words, 4) #last param - windows size\n",
     "finder.apply_freq_filter(2) \n",
-    "finder.apply_word_filter(lambda w: len(w) < 3 or w.lower() in ignored_words)\n",
+    "finder.apply_word_filter(lambda w: len(w) < 2 or w.lower() in ignored_words)\n",
     "\n",
     "# nbest = top n ngrams scored by the given function\n",
     "bigram_measures = BigramAssocMeasures()\n",
@@ -103,6 +103,15 @@
    ],
    "source": [
     "help(brown.words)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### For homework: trigrams"
    ]
   },
   {
