--- a/POSTagging.ipynb
+++ b/POSTagging.ipynb
@@ -1,16 +1,110 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### An Example of POS Tagging"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['They',\n",
+       " 'refuse',\n",
+       " 'to',\n",
+       " 'permit',\n",
+       " 'us',\n",
+       " 'to',\n",
+       " 'obtain',\n",
+       " 'the',\n",
+       " 'refuse',\n",
+       " 'permit']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import nltk\n",
     "from nltk import pos_tag, word_tokenize\n",
-    "text = word_tokenize(\"They refuse to permit us to obtain the refuse permit\")"
+    "text = word_tokenize(\"They refuse to permit us to obtain the refuse permit\")\n",
+    "text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('They', 'PRP'),\n",
+       " ('refuse', 'VBP'),\n",
+       " ('to', 'TO'),\n",
+       " ('permit', 'VB'),\n",
+       " ('us', 'PRP'),\n",
+       " ('to', 'TO'),\n",
+       " ('obtain', 'VB'),\n",
+       " ('the', 'DT'),\n",
+       " ('refuse', 'NN'),\n",
+       " ('permit', 'NN')]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pos_tag(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('They', 'PRP'),\n",
+       " ('refuse', 'VBP'),\n",
+       " ('to', 'TO'),\n",
+       " ('permit', 'VB'),\n",
+       " ('Wiil.I.Am', 'NNP'),\n",
+       " ('to', 'TO'),\n",
+       " ('obtain', 'VB'),\n",
+       " ('the', 'DT'),\n",
+       " ('refuse', 'NN'),\n",
+       " ('permit', 'NN')]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import nltk\n",
+    "from nltk import pos_tag, word_tokenize\n",
+    "text = word_tokenize(\"They refuse to permit Wiil.I.Am to obtain the refuse permit\")\n",
+    "text\n",
+    "pos_tag(text)"
    ]
   },
   {
@@ -20,9 +114,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "pos_tag(text)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
